# fastapi_project

./: .gitignore  main.py  pyproject.toml
app/: config.py  database.py  dependency.py  enum.py  models.py  schemas.py
app/api/v1/: operations.py  users.py  wallets.py
app/repository/: operations.py  users.py  wallets.py
app/schemas/: operations.py  users.py  wallets.py
app/service/: exchange_service.py  operations.py  users.py  wallets.py
tests/: conftest.py
tests/test_api/test_operations/: conftest.py  test_add_expense.py  test_add_income.py  test_show_logs.py  test_transfer.py
tests/test_api/test_users.py/: conftest.py  test_create_user.py  test_get_user.py
tests/test_api/test_wallets/: conftest.py  test_create_wallet.py  test_get_balance.py  test_get_wallets.py
